--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,8 @@
     <string name="action_search">Search</string>
     <string name="action_settings">Settings</string>
     <string name="action_account">Account</string>
+    <string name="title_library">Library</string>
+    <string name="title_for_you">For You</string>
+    <string name="title_browse">Browse</string>
+    <string name="title_radio">Radio</string>
 </resources>
