--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,4 +12,7 @@
     <string name="this_is_for_you_fragment">This is for you fragment</string>
     <string name="this_is_the_browse_fragment">This is the Browse Fragment</string>
     <string name="this_is_the_radio_fragment">This is the Radio Fragment</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
