recycler view added

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,4 +24,5 @@
     <string name="downloaded_music">Downloaded Music</string>
     <string name="recently_added">Recently Added</string>
     <string name="album_art">Album Art</string>
+    <string name="roses">Roses</string>
 </resources>
